# flowlabs-problem

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  question.md
flow/: __init__.py  cli.py  solution.py
tests/: example_test.py  flow_test.py
